# roscode

./: .env.example  .gitignore  2026-04-24-235417-this-session-is-being-continued-from-a-previous-c.txt  CLAUDE.md  DEMO.md  HANDOFF-2026-04-21.txt  LICENSE  PLAN.md  README.md  fix_svg_viewboxes.py  generate_app_icon.py  process_svgs.py  pyproject.toml  requirements.txt  verify-build.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-linux.yml
demos/: README.md
demos/demo_drift/: expected_output.txt  setup.sh
demos/demo_drift/workspace/: .gitkeep
demos/demo_drift/workspace/src/robot_demo/: package.xml  setup.cfg  setup.py
demos/demo_drift/workspace/src/robot_demo/launch/: demo.launch.py
demos/demo_drift/workspace/src/robot_demo/robot_demo/: cmd_vel_listener.py  cmd_vel_pub.py  (+3 more)
demos/demo_drift/workspace/src/simple_odometry/: package.xml  setup.cfg  setup.py
demos/demo_recording/: README.md
demos/demo_recording/workspace/src/robot_demo/: package.xml  setup.py
demos/demo_recording/workspace/src/robot_demo/launch/: demo.launch.py
demos/demo_recording/workspace/src/robot_demo/robot_demo/: cmd_vel_pub.py  diagnostics.py  imu_node.py  robot_base.py
demos/demo_safety/: expected_output.txt  setup.sh
demos/demo_safety/workspace/: .gitkeep
demos/demo_safety/workspace/src/fake_lidar/: package.xml  setup.cfg  setup.py
demos/demo_safety/workspace/src/fake_lidar/fake_lidar/: fake_lidar.py
roscode/: __init__.py  agent.py  cli.py  config.py  container.py  prompts.py  server.py  ui.py  ui_protocol.py
roscode-extension/: .vscodeignore  esbuild.js  package-lock.json  package.json  pnpm-lock.yaml  roscode-0.1.0.vsix  tsconfig.json
roscode-extension/media/walkthrough/: agent.md  api-key.md  discover.md  graph.md
roscode-extension/scripts/: build-app.sh  build-roscode-studio.sh  roscode-studio
roscode-extension/src/: extension.ts  scaffoldProject.ts
roscode-extension/src/agent/: inlineAsk.ts  tools.ts
roscode-extension/src/branding/: workbenchBrand.ts
roscode-extension/src/panels/: AgentPanel.ts  LauncherPanel.ts  NodeGraphPanel.ts  RoscodePagePanel.ts  StudioPanel.ts  TopicMonitorPanel.ts
roscode-extension/src/providers/: LibraryProvider.ts  NetworkProvider.ts  NodeProvider.ts  PackageProvider.ts  TopicProvider.ts
roscode-extension/src/ros/: connection.ts  discovery.ts
roscode-extension/src/views/: AgentView.ts  GraphView.ts  HomeView.ts  PlotView.ts  TerminalView.ts
roscode-extension/themes/: roscode-dark.json  workbench.css
roscode/tools/: __init__.py  _shell.py  _state.py  analysis_tools.py  build_tools.py  fs_tools.py  gui_tools.py  pkg_tools.py  ros_tools.py  runtime_tools.py
scripts/: build-studio.sh  inject-css.py  patch-bundle.sh  patch-product.py  prep-for-demo.sh
studio/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
studio/src/: App.svelte  app.css  vite-env.d.ts
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/src/: commands.rs  container.rs  lib.rs  lima.rs  main.rs
studio/src/lib/: Chat.svelte  PackageStore.svelte  RosMap.svelte  Splash.svelte  Terminal.svelte  TerminalView.svelte  chat.ts  registry.json  tauri.ts
studio/src/lib/editor/: MonacoEditor.svelte
studio/src/lib/layout/: ActivityBar.svelte  AgentPanel.svelte  BottomPanel.svelte  FileTree.svelte  LeftToolPanel.svelte  PackageTree.svelte  Resizer.svelte  SidePanel.svelte  StatusBar.svelte
studio/src/lib/modals/: ApiKeyModal.svelte  CommandPalette.svelte  NewPackageModal.svelte  apiKeyState.ts
studio/src/lib/pages/: FilesPage.svelte  HomePage.svelte  LibraryPage.svelte  NetworkPage.svelte  NodesPage.svelte  TerminalPage.svelte  TopicsPage.svelte  WelcomePage.svelte
studio/src/lib/stores/: layout.ts  terminal.ts  terminalStore.ts
studio/src/lib/widgets/: MapWidget.svelte  NetworkWidget.svelte  NodesWidget.svelte  ParamsWidget.svelte  TopicsWidget.svelte  WidgetShell.svelte
tests/: conftest.py  test_agent_loop.py  test_analysis_tools.py  test_build_tools.py  test_fs_tools.py  test_gui_tools.py  test_pkg_tools.py  test_ros_tools.py  test_runtime_tools.py  test_server.py  test_tools.py
(+3 files in other folders)
