[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "roscode"
version = "0.1.0"
description = "Agentic CLI that controls, debugs, and extends ROS 2 robots with natural language. Claude Opus 4.7 is the brain; ROS 2 is the body."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "rickycrack", email = "ricardoaguirredelafuente@gmail.com" },
]
keywords = ["ros2", "robotics", "claude", "anthropic", "agent", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
roscode = "roscode.cli:main"

[project.urls]
Homepage = "https://github.com/raguirref/roscode"
Repository = "https://github.com/raguirref/roscode"
Issues = "https://github.com/raguirref/roscode/issues"

[tool.hatch.build.targets.wheel]
packages = ["roscode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
